# kekw.lol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
docs/: todo.md
inc/: CMakeLists.txt
inc/glad/: CMakeLists.txt  glad.c
inc/imgui/: CMakeLists.txt
inc/stb/: CMakeLists.txt
include/glad/: glad.h
include/imgui/: CMakeLists.txt
src/: CMakeLists.txt  glad.c  main.cpp
src/mod/: CMakeLists.txt  available-card-collection.cpp  available-card-collection.h  available-card.cpp  available-card.h  card-collection.cpp  card-collection.h  card.cpp  card.h  hero.cpp  hero.h  mod-types.h  mod_types.h  owned-card-collection.cpp  owned-card-collection.h  owned-card.cpp  owned-card.h  recruit-card-collection.cpp  recruit-card-collection.h  recruit-card-factory.cpp  recruit-card-factory.h  recruit-card.cpp  recruit-card.h  recruit-env.cpp  recruit-env.h  recruit-hero.cpp  recruit_hero.h  warband.cpp  warband.h
src/mod/lua/: test.lua
src/res/: CMakeLists.txt
src/util/: CMakeLists.txt  file-utils.cpp  file-utils.h  tools.h
src/ux/: CMakeLists.txt  contexts.h
src/ux/detail/: CMakeLists.txt  drag-data.cpp  drag-data.h
src/ux/res/: CMakeLists.txt
src/ux/scenes/: CMakeLists.txt
src/ux/scenes/common/: CMakeLists.txt  box-mesh-2d.cpp  box-mesh-2d.h  card-band-entity.cpp  card-band-entity.h  card-drop-entity.cpp  card-drop-entity.h  card-entity.cpp  card-entity.h  card-renderer.cpp  card-renderer.h
src/ux/scenes/recruit/: CMakeLists.txt  recruit-scene-entity.cpp  recruit-scene-entity.h  recruit-scene.cpp  recruit-scene.h
src/ux/shader/: CMakeLists.txt  shader.cpp  shader.h
src/ux/shader/impl/: card.frag  simple.frag
src/ux/util/: CMakeLists.txt  file-utils.cpp  file-utils.h
src/ux/view/: CMakeLists.txt  gl-window-layer.cpp  gl-window-layer.h  recruit-window-layer.cpp  recruit-window-layer.h  scene-window-layer.cpp  scene-window-layer.h  ux-window-layer.cpp  ux-window-layer.h  window-manager.cpp  window-manager.h
src/ux/view/widgets/: CMakeLists.txt  camera-widget.hpp  debug-overlay-widget.cpp  debug-overlay-widget.h  test-widget.cpp  test-widget.h
src/ux/view/widgets/imgui/: CMakeLists.txt  extensions.cpp  extensions.h
src/ux/view/world/: CMakeLists.txt  cameras.cpp  cameras.h  scene.h  world.hpp
src/world/: CMakeLists.txt  camera.cpp  camera.h  collider.cpp  collider.h  entity-band.cpp  entity-band.h  entity.cpp  entity.h  plane.h  renderer.cpp  renderer.h  scene.cpp  scene.h  spatial.cpp  spatial.h  transform.cpp  transform.h  types.h
tests/: CMakeLists.txt  extensions.h  test1.cpp
tests/mod/: CMakeLists.txt  card-collection-tests.cpp  spikes.cpp
